added logout_return call w/ cullerton
